// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto px 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 10px;
}

<div
  className="emotion-0"
/>
`;

exports[`float property 1`] = `
.emotion-0 {
  float: left;
}

<div
  className="emotion-0"
/>
`;

exports[`handles more than 10 dynamic properties 1`] = `
.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  border-right: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
}

<div
  className="emotion-0"
/>
`;

exports[`random expression 1`] = `
.emotion-0 {
  font-size: 20px;
  background: green;
}

@media (min-width:420px) {
  .emotion-0 {
    color: blue;
    width: 96px;
    height: 96px;
    line-height: 40px;
  }
}

<div
  className="emotion-0"
/>
`;

exports[`random interpolation with undefined values 1`] = `
.emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="emotion-0"
/>
`;
